--- a/rt-live.org
+++ b/rt-live.org
@@ -707,25 +707,25 @@ sigmas = np.linspace(1/20, 1, 20)
 targets = ~states.index.get_level_values('state').isin(FILTERED_REGION_CODES)
 states_to_process = states.loc[targets]
 
-results = {}
-
-for state_name, cases in states_to_process.groupby(level='state'):
-    print(state_name)
-    new, smoothed = prepare_cases(cases, cutoff=25)
-    if len(smoothed) == 0:
-        new, smoothed = prepare_cases(cases, cutoff=10)
-    result = {}
-    # Holds all posteriors with every given value of sigma
-    result['posteriors'] = []
-    # Holds the log likelihood across all k for each value of sigma
-    result['log_likelihoods'] = []
-    for sigma in sigmas:
-        posteriors, log_likelihood = get_posteriors(smoothed, sigma=sigma)
-        result['posteriors'].append(posteriors)
-        result['log_likelihoods'].append(log_likelihood)
-    # Store all results keyed off of state name
-    results[state_name] = result
-    clear_output(wait=True)
+if not len(results):
+    results = {}
+    for state_name, cases in states_to_process.groupby(level='state'):
+        print(state_name)
+        new, smoothed = prepare_cases(cases, cutoff=25)
+        if len(smoothed) == 0:
+            new, smoothed = prepare_cases(cases, cutoff=10)
+        result = {}
+        # Holds all posteriors with every given value of sigma
+        result['posteriors'] = []
+        # Holds the log likelihood across all k for each value of sigma
+        result['log_likelihoods'] = []
+        for sigma in sigmas:
+            posteriors, log_likelihood = get_posteriors(smoothed, sigma=sigma)
+            result['posteriors'].append(posteriors)
+            result['log_likelihoods'].append(log_likelihood)
+        # Store all results keyed off of state name
+        results[state_name] = result
+        clear_output(wait=True)
 
 print('Done.')
 #+end_src
