add section compile final results

--- a/rt-live.org
+++ b/rt-live.org
@@ -765,6 +765,34 @@ plot_it(filename='./img/systrom-9.png')
 #+RESULTS:
 [[file:./img/systrom-9.png]]
 
+** Compile Final Results
+Given that we've selected the optimal $\sigma$, let's grab the precalculated
+posterior corresponding to that value of $\sigma$ for each state. Let's also
+calculate the 90% and 50% highest density intervals (this takes a little
+while) and also the most likely value.
+
+# In[27]:
+
+#+BEGIN_SRC python :session *Python-3.x* :exports both :results output
+final_results = None
+
+for state_name, result in results.items():
+    print(state_name)
+    posteriors = result['posteriors'][max_likelihood_index]
+    hdis_90 = highest_density_interval(posteriors, p=.9)
+    hdis_50 = highest_density_interval(posteriors, p=.5)
+    most_likely = posteriors.idxmax().rename('ML')
+    result = pd.concat([most_likely, hdis_90, hdis_50], axis=1)
+    if final_results is None:
+        final_results = result
+    else:
+        final_results = pd.concat([final_results, result])
+    clear_output(wait=True)
+
+print('Done.')
+#+end_src
+
+
 
 \newpage
 #+BIBLIOGRAPHY: refs cell limit:t
