--- a/rt-live.org
+++ b/rt-live.org
@@ -679,7 +679,7 @@ the log likelihoods per state for each value of sigma then choose the maximum.
 
 Note: this takes a while!
 
-#+BEGIN_SRC python :session *Python-3.x* :exports both :results output
+#+BEGIN_SRC python :session *Python-3.x* :exports code :results silent
 states.loc[('MA', pd.Timestamp('2020-04-20'))] = 39643
 #+end_src
 
@@ -798,6 +798,7 @@ print('Done.')
 : 
 
 
+\newpage
 ** Plot All US States
 #+BEGIN_SRC python :session *Python-3.x* :exports both :results file
 ncols = 4
@@ -805,22 +806,21 @@ nrows = int(np.ceil(len(results) / ncols))
 
 def plot_it(filename):
     fig, axes = plt.subplots(nrows=nrows, ncols=ncols, figsize=(15, nrows*3))
-    for i, (state_name, result) in enumerate(final_results.groupby('state')):
-        plot_rt(result.iloc[1:], axes.flat[i], state_name)
+    for i, (state_name, result) in enumerate(final_results.groupby('state')): plot_rt(result.iloc[1:], axes.flat[i], state_name, fig)
     fig.tight_layout()
     fig.set_facecolor('w')
     plt.savefig(filename)
     return filename
-    
-plot_it(filename='./img/systrom-9.png')
+
+plot_it(filename='./img/systrom-10.png')
 #+end_src
 
+#+attr_latex: :width 0.9\linewidth
 #+RESULTS:
-[[file:<function clear_output at 0x7f7f43a3f8c8>]]
+[[file:./img/systrom-10.png]]
 
-# In[40]:
 
-#+BEGIN_SRC python :session *Python-3.x* :exports both :results output
+#+BEGIN_SRC python :session *Python-3.x* :exports both :results output :eval no
 # Since we now use a uniform prior, the first datapoint is pretty bogus, so just truncating it here
 final_results = final_results.groupby('state').apply(lambda x: x.iloc[1:].droplevel(0))
 #+end_src
