--- a/rt-live.org
+++ b/rt-live.org
@@ -826,7 +826,6 @@ final_results = final_results.groupby('state').apply(lambda x: x.iloc[1:].drople
 #+end_src
 
 
-
 ** Export Data to CSV
 Create a ~data~ folder:
 #+begin_src bash :exports both code :results silent
@@ -867,57 +866,62 @@ mr = final_results.loc[~filtered].groupby(level=0)[['ML', 'High_90', 'Low_90']].
 
 def plot_it(filename):
     mr.sort_values('ML', inplace=True)
-    plot_standings(mr);
+    plot_standings(mr, figsize=(16, 4.5));
     plt.savefig(filename)
     return filename
     
 plot_it(filename='./img/systrom-11.png')
 #+end_src
 
+#+attr_latex: :width 0.9\linewidth
 #+RESULTS:
 [[file:./img/systrom-11.png]]
 
 #+BEGIN_SRC python :session *Python-3.x* :exports both :results file
 def plot_it(filename):
     mr.sort_values('High_90', inplace=True)
-    plot_standings(mr);
+    plot_standings(mr, figsize=(16, 4.5));
     plt.savefig(filename)
     return filename
     
 plot_it(filename='./img/systrom-12.png')
 #+end_src
 
+#+attr_latex: :width 0.9\linewidth
 #+RESULTS:
 [[file:./img/systrom-12.png]]
 
 #+BEGIN_SRC python :session *Python-3.x* :exports both :results file
 def plot_it(filename):
     show = mr[mr.High_90.le(1)].sort_values('ML')
-    fig, ax = plot_standings(show, title='Likely Under Control');
+    fig, ax = plot_standings(show, figsize=(5.25,4.5), title='Likely Under Control');
     plt.savefig(filename)
     return filename
     
 plot_it(filename='./img/systrom-13.png')
 #+end_src
 
+#+attr_latex: :width 0.6\linewidth
 #+RESULTS:
+[[file:./img/systrom-13.png]]
 
 #+BEGIN_SRC python :session *Python-3.x* :exports both :results file
 show = mr[mr.High_90.le(1)].sort_values('ML')
 fig, ax = plot_standings(show, title='Likely Under Control');
 
-# In[48]:
-
 def plot_it(filename):
     show = mr[mr.Low_90.ge(1.0)].sort_values('Low_90')
-    fig, ax = plot_standings(show, title='Likely Not Under Control');
+    fig, ax = plot_standings(show, figsize=(6, 4.5), title='Likely Not Under Control');
     ax.get_legend().remove()
     plt.savefig(filename)
     return filename
     
-plot_it(filename='./img/systrom-13.png')
+plot_it(filename='./img/systrom-14.png')
 #+end_src
 
+#+attr_latex: :width 0.6\linewidth
+#+RESULTS:
+[[file:./img/systrom-14.png]]
 
 \newpage
 #+BIBLIOGRAPHY: refs cell limit:t
