--- a/rt-live.org
+++ b/rt-live.org
@@ -554,8 +554,8 @@ the likelihood of seeing our data $k$: $P(k|\sigma)$. Since $\sigma$ is a
 fixed value, let's leave it out of the notation, so we're trying to maximize
 $P(k)$ over all choices of $\sigma$.
  
-Since $P(k)=P(k_0,k_1,\ldots,k_t)=P(k_0)P(k_1)\ldots P(k_t)$ we need to
-define $P(k_t)$. It turns out this is the denominator of Bayes rule:
+Since $\Pr(k)=P(k_0,k_1,\ldots,k_t)=\Pr(k_0)P(k_1)\ldots \Pr(k_t)$ we need to
+define $\Pr(k_t)$. It turns out this is the denominator of Bayes rule:
 \begin{align*}
     \Pr(R_t \mid k_t) &= 
         \frac{\Pr(k_t\mid R_t)\Pr(R_t)}{\Pr(k_t)}
@@ -640,7 +640,6 @@ plot_it(filename='./img/systrom-7.png')
 ** Plotting in the Time Domain with Credible Intervals
 Since our results include uncertainty, we'd like to be able to view the
 most likely value of $R_t$ along with its highest-density interval.
-# In[14]:
 #+BEGIN_SRC python :session *Python-3.x* :exports both :results output
 hdis = highest_density_interval(posteriors, p=.9)
 most_likely = posteriors.idxmax().rename('ML')
@@ -695,9 +694,6 @@ Note: this takes a while!
 
 #+BEGIN_SRC python :session *Python-3.x* :exports code :results silent
 states.loc[('MA', pd.Timestamp('2020-04-20'))] = 39643
-#+end_src
-
-#+BEGIN_SRC python :session *Python-3.x* :exports both :results output
 print( f".\n{states.xs('MA').diff().tail()}" )
 #+end_src
 
@@ -784,8 +780,6 @@ Given that we've selected the optimal $\sigma$, let's grab the precalculated
 posterior corresponding to that value of $\sigma$ for each state. Let's also
 calculate the 90% and 50% highest density intervals (this takes a little
 while) and also the most likely value.
-
-# In[27]:
 
 #+BEGIN_SRC python :session *Python-3.x* :exports both :results output
 if not 'final_results' in locals() or final_results is None:
