notebook now reads static file daily.csv with data set to 2020-04-22

--- a/Realtime-R0.ipynb
+++ b/Realtime-R0.ipynb
@@ -548,12 +548,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://covidtracking.com/api/v1/states/daily.csv'\n",
-    "states = pd.read_csv(url,\n",
+    "import os\n",
+    "assert os.path.isfile('daily.csv')\n",
+    "\n",
+    "# local file daily.csv has history up to 2020-04-22 to sync with Realtime-R0.ipynb\n",
+    "READ_LOCAL_FILE = True\n",
+    "if not READ_LOCAL_FILE:\n",
+    "    url = 'https://covidtracking.com/api/v1/states/daily.csv'\n",
+    "    states = pd.read_csv(url,\n",
     "                     usecols=['date', 'state', 'positive'],\n",
     "                     parse_dates=['date'],\n",
     "                     index_col=['state', 'date'],\n",
-    "                     squeeze=True).sort_index()"
+    "                     squeeze=True).sort_index()\n",
+    "else:\n",
+    "    filename = 'daily.csv'\n",
+    "    states = pd.read_csv(filename,\n",
+    "        usecols=['date', 'state', 'positive'],\n",
+    "        parse_dates=['date'],\n",
+    "        index_col=['state', 'date'],\n",
+    "        squeeze=True\n",
+    "    ).sort_index()    "
    ]
   },
   {
