BUGFIX: idx_start -> idx_start[0] to obviate error: TypeError: cannot do slice indexing on <class 'pandas.core.indexes.datetimes.DatetimeIndex'> with these indexers [[2]] of <class 'numpy.ndarray'>

--- a/Realtime-R0.ipynb
+++ b/Realtime-R0.ipynb
@@ -613,7 +613,7 @@
     "    \n",
     "    idx_start = np.searchsorted(smoothed, cutoff)\n",
     "    \n",
-    "    smoothed = smoothed.iloc[idx_start:]\n",
+    "    smoothed = smoothed.iloc[idx_start[0]:]\n",
     "    original = new_cases.loc[smoothed.index]\n",
     "    \n",
     "    return original, smoothed\n",
